fix link spacing on rfa

--- a/app/assets/stylesheets/tracking.scss
+++ b/app/assets/stylesheets/tracking.scss
@@ -1,5 +1,5 @@
 //@import './sidebar.scss';
-
+.tracking-main-page{
 .nav-menu {
   font-style: pull-right;
 }
@@ -82,4 +82,5 @@ table {
   input[type="checkbox"] +label {
     white-space: nowrap;
   }
+}
 }
